--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nuestracasa-web",
   "version": "v1.0.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "vite --port 5052",
     "build": "vite build",
